Implemented ping features, added ping management on backend, new API definitions etc.
